--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <img src="/assets/img/Sanjith Passport Photo_29_JUN_2019.jpeg" alt="Sanjith headshot" class="avatar">
       <div>
         <h1>Hi, I'm Sanjith 👋</h1>
-        <p>I’m a CS grad student at the University of Florida (’27), ex-intern at ChakraTech, and former D1 tennis athlete at UCSD. I work across ML, cloud, and full‑stack.</p>
+        <p>I’m a CS grad student pursuing my Master's degree at the University of Florida (’27), ex-intern at ChakraTech, and former D1 tennis athlete at UCSD. I work across ML, cloud, and some full‑stack development (with AI assistance).</p>
         <p class="chips">
           <span>Python</span><span>FastAPI</span><span>AWS</span><span>Terraform</span>
-          <span>ML</span><span>React</span><span>SQL</span>
+          <span>ML</span><span>SQL</span>
         </p>
         <p>
           <a class="btn" href="/projects.html">See projects</a>
@@ -71,7 +71,7 @@
           </div>
         </li>
         <li>
-          <div class="time">2019–2025</div>
+          <div class="time">2021–2025</div>
           <div class="content">
             <strong>UC San Diego — B.S. Computer Science, Minor in Finance</strong>
             <p>Division I Men’s Tennis. Coursework: ML, Security, Systems, Finance.</p>
